# price_tracker

./: .gitignore  LICENSE  README.md  history_3060.json  history_3060_gaming.json  history_3060_oc.json  history_helly_hansen_jacket.json  history_helly_hansen_jacket_notify.json  pyproject.toml  tracked.json
.github/workflows/: price_tracker.yml
tracker/: __init__.py  price_tracker.py
